<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="46dp"
            android:text="@string/main_activity"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/main_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="46dp"
            android:text="@string/show_alertdialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/main_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="46dp"
            android:text="@string/show_dialogfragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_button1" />

        <Button
            android:id="@+id/main_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="46dp"
            android:text="@string/show_xml_bottomsheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_button2" />

        <Button
            android:id="@+id/main_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="46dp"
            android:text="@string/show_bottomsheetdialogfragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_button3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottom_sheet"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>